Fixed sidebar button wrapping issue

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -155,6 +155,7 @@ label > * {
     left: 0;
     overflow: hidden;
     transition: ease opacity .5s;
+    z-index: 200;
 }
 
 #load:before {
